--- a/package.json
+++ b/package.json
@@ -20,8 +20,15 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@babel/preset-react": "^7.25.7",
+        "@emotion/react": "^11.13.3",
+        "@emotion/styled": "^11.13.0",
+        "@mui/icons-material": "^6.1.3",
+        "@mui/material": "^6.1.3",
         "autoprefixer": "^10.4.20",
         "postcss": "^8.4.47",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "tailwindcss": "^3.4.13"
     }
 }
