--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.1.*",
         "symfony/runtime": "7.1.*",
+        "symfony/security-bundle": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
+        "symfony/ux-icons": "^2.20",
         "symfony/webpack-encore-bundle": "^2.2",
         "symfony/yaml": "7.1.*"
     },
