--- a/.env
+++ b/.env
@@ -28,3 +28,7 @@ APP_SECRET=8a093ff764476a240d953c47aacce9a6
  DATABASE_URL="mysql://root:@127.0.0.1:3306/trackt?serverVersion=10.4.25-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+ MAILER_DSN="smtp://66e44407745413:********da67@sandbox.smtp.mailtrap.io:2525"
+###< symfony/mailer ###
