--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,24 @@
+# routes.yaml
+
+# Importation automatique des routes des contrôleurs en utilisant des annotations
 controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
+    resource: '../src/Controller/'
     type: attribute
+
+# Route explicite pour le dashboard
+dashboard:
+    path: /dashboard
+    controller: App\Controller\DashboardController::index
+
+# Route explicite pour les tâches
+task_index:
+    path: /tasks
+    controller: App\Controller\TaskController::index
+
+
+
+# controllers:
+#     resource:
+#         path: ../src/Controller/
+#         namespace: App\Controller\DashboardController::index
+#     type: attribute
