--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=8a093ff764476a240d953c47aacce9a6
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
- DATABASE_URL="mysql://root:root@127.0.0.1:3306/trackt?serverVersion=10.4.25-MariaDB&charset=utf8mb4"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/trackt?serverVersion=10.4.25-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
