Affichage des projets créer dans le header sous forme de liste déroulante

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -15,7 +15,9 @@ task_index:
     path: /tasks
     controller: App\Controller\TaskController::index
 
-
+projet_index:
+    path: /projet
+    controller: App\Controller\ProjetController::index
 
 # controllers:
 #     resource:
