--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@babel/preset-react": "^7.25.7",
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
+        "@fullcalendar/core": "^6.1.15",
+        "@fullcalendar/daygrid": "^6.1.15",
         "@mui/icons-material": "^6.1.3",
         "@mui/material": "^6.1.3",
         "autoprefixer": "^10.4.20",
